--- a/juego.html
+++ b/juego.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/juego.css">
     <title>MortalDev</title>
 </head>
 <body>
 
-    <section>Hello world</section>
+    <span lass="counter"></span>
 
     <script src="./js/juego.js"></script>
 </body>
