adding background and queries for game

--- a/juego.html
+++ b/juego.html
@@ -8,7 +8,14 @@
     <title>MortalDev</title>
 </head>
 <body>
-
+    <div class="live-bars-container">
+        <div class="life-bar">
+            
+        </div>
+        <div class="life-bar">
+            
+        </div>
+    </div>
     <span lass="counter"></span>
 
     <script src="./js/juego.js"></script>
