--- a/juego.html
+++ b/juego.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="estilos.css" type="text/css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div id="pelea">
+
+    </div>
     
     <script src="animacion.js"></script>
 </body>
