life bars added

--- a/juego.html
+++ b/juego.html
@@ -10,10 +10,10 @@
 <body>
     <div class="live-bars-container">
         <div class="life-bar">
-            
+            <div class="life-bar-filling"></div>
         </div>
         <div class="life-bar">
-            
+            <div class="life-bar-filling"></div>
         </div>
     </div>
     <span lass="counter"></span>
