--- a/final.html
+++ b/final.html
@@ -7,6 +7,8 @@
     <title>Mortal Dev</title>
 </head>
 <body>
-    
+    <h2>MORTAL DEV</h2>
+    <div>ELIMINADOS</div>
+    <button>JUGAR DE NUEVO</button>
 </body>
 </html>
