--- a/popUp.html
+++ b/popUp.html
@@ -7,7 +7,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <title>Mortal Dev</title>
 </head>
-<body>
+<body class="background-popUp">
     <div class="popUp">
         <img class="img-calavera" src="/src/images/calavera.png" alt="Calavera- Jugador eliminado">
         <p class="popUp-text">Has eliminado a un developer</p>
