--- a/final.html
+++ b/final.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortal Dev</title>
+    <link href="/css/style.css" rel="stylesheet">
 </head>
-<body>
-    <h2>MORTAL DEV</h2>
-    <div>ELIMINADOS</div>
-    <button>JUGAR DE NUEVO</button>
+<body class="body-final">
+    <div class="final-div">
+        <h2 class="title-final">MORTAL DEV</h2>
+        <div class="text-eliminados">ELIMINADOS</div>
+        <button class="button-playagain">JUGAR DE NUEVO</button>
+    </div>
+    
 </body>
 </html>
