--- a/juego.html
+++ b/juego.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="pelea">
-
+    <div class="pelea">
+        
     </div>
     
     <script src="animacion.js"></script>
