--- a/juego.html
+++ b/juego.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <span lass="counter"></span>
+    <span class="counter"></span>
 
     <script src="./js/juego.js"></script>
 </body>
