--- a/juego.html
+++ b/juego.html
@@ -8,6 +8,10 @@
     <title>MortalDev</title>
 </head>
 <body>
+    <div class="player-names">
+        <h2>YOU</h2>
+        <h2>List Name</h2>
+    </div>
     <div class="live-bars-container">
         <div class="life-bar">
             <div class="life-bar-filling"></div>
