--- a/juego.html
+++ b/juego.html
@@ -17,6 +17,9 @@
     <div class="rayos">
         
     </div>
+    <div class="detenido">
+
+    </div>
     
     <script src="animacion.js"></script>
 </body>
