--- a/juego.html
+++ b/juego.html
@@ -8,7 +8,10 @@
     <title>MortalDev</title>
 </head>
 <body>
-    <span class="counter"></span>
+    <section class="containerCounter">
+        <span class="counter"></span>
+    </section>
+    
     <div class="player-names">
         <h2>YOU</h2>
         <h2>List Name</h2>
