--- a/juego.html
+++ b/juego.html
@@ -26,6 +26,9 @@
         <div class="victima">
 
         </div>
+        <div class="victima2">
+
+        </div>
     </div>
     <script src="animacion.js"></script>
 </body>
