--- a/juego.html
+++ b/juego.html
@@ -29,6 +29,12 @@
         <div class="victima2">
 
         </div>
+        <div class="victima3">
+
+        </div>
+        <div class="victima4">
+
+        </div>
     </div>
     <script src="animacion.js"></script>
 </body>
