Add send page of game

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </section>
         </section>
         <section id="play">
-            <button>PLAY</button>
+            <button><a id="button" href="./juego.html">PLAY</a></button>
         </section>
     </section>
 </body>
