--- a/juego.html
+++ b/juego.html
@@ -18,7 +18,7 @@
         <div class="poder" id="poder">
             
         </div>
-        <div><input type="button" id="pausa" value="pause"></div>
+        <div><input type="button" id="pausa" value="Kill"></div>
         <div class="rayos">
             
         </div>        
