--- a/juego.html
+++ b/juego.html
@@ -12,7 +12,7 @@
         <div class="detenido">
 
         </div>
-        <div class="pelea">
+        <div class="pelea" id="pelea">
             
         </div>
         <div class="poder" id="poder">
