--- a/juego.html
+++ b/juego.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <div class="detenido">
+        <div class="detenido" id="detenido">
 
         </div>
         <div class="pelea" id="pelea">
