--- a/juego.html
+++ b/juego.html
@@ -24,7 +24,7 @@
         </div>        
     </div>
     <div>
-        <div class="detenidov">
+        <div class="detenidov" id="detenidov">
 
         </div>
         <div class="victima">
