--- a/juego.html
+++ b/juego.html
@@ -27,7 +27,7 @@
         <div class="detenidov" id="detenidov">
 
         </div>
-        <div class="victima">
+        <div class="victima" id="victimagol">
 
         </div>
         <div class="victima3">
