git Merge branch 'main' of https://github.com/jesusocampo1105/Mortal-Dev

--- a/index.html
+++ b/index.html
@@ -14,17 +14,10 @@
         <section id="field">
             <section id="add">
                 <input type="text" name="nombre" id="nombre" placeholder="| names">
-                <button>+</button>
+                <button id="add">+</button>
             </section>
             <section id="list">
-                <input type="text" name="nombres" id="nombres">
-                <button>-</button>
-                <input type="text" name="nombres" id="nombres">
-                <button>-</button>
-                <input type="text" name="nombres" id="nombres">
-                <button>-</button>
-                <input type="text" name="nombres" id="nombres">
-                <button>-</button>
+                <ul type="text" name="nombres" id="nombres"></ul>
             </section>
         </section>
         <section id="play">
