--- a/juego.html
+++ b/juego.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="player-names">
-        <h2>YOU</h2>
+        <h2 class="you-text">YOU</h2>
         <h2>List Name</h2>
     </div>
     <div class="live-bars-container">
-        <div class="life-bar">
+        <div class="life-bar you-life-bar">
             <div class="life-bar-filling"></div>
         </div>
-        <div class="life-bar">
+        <div class="life-bar life-bar-changing">
             <div class="life-bar-filling"></div>
         </div>
     </div>
