funcionalidad de arrays

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section id="field">
             <section id="add">
                 <input type="text" name="nombre" id="nombre" placeholder="| names">
-                <button id="add">+</button>
+                <button id="addBoton">+</button>
             </section>
             <section id="list">
                 <ul type="text" name="nombres" id="nombres"></ul>
@@ -25,4 +25,5 @@
         </section>
     </section>
 </body>
+<script src="/js/script.js"></script>
 </html>
