--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortal Dev</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>MORTAL DEV</h1>
@@ -25,5 +25,5 @@
         </section>
     </section>
 </body>
-<script src="/js/script.js"></script>
+<script src="./js/script.js"></script>
 </html>
