--- a/juego.html
+++ b/juego.html
@@ -18,10 +18,10 @@
         <div class="poder" id="poder">
             
         </div>
-        <div><input type="button" id="pausa" value="Kill"></div>
-        <div class="rayos">
+        <div class="rayos" id="rayos">
             
-        </div>        
+        </div>
+        <div><input type="button" id="pausa" value="Kill"></div>                
     </div>
     <div>
         <div class="detenidov" id="detenidov">
@@ -33,7 +33,7 @@
         <div class="victima3">
 
         </div>
-        <div class="victima2">
+        <div class="victima2" id="electrocutado">
 
         </div>        
         <div class="victima4">
