adding function to go juego.html

--- a/juego.html
+++ b/juego.html
@@ -26,11 +26,22 @@
             <div class="life-bar-filling"></div>
         </div>
     </div>
-    
-    <div>
-        <div class="detenido" id="detenido">
+    <section class="fight-zone">
+        <div class="fight-left-zone">
+            <div class="detenido" id="detenido">
 
+            </div>
         </div>
+        <div class="fight-right-zone">
+            <div class="detenidov" id="detenidov">
+
+            </div>
+        </div>
+    </section>
+    <div>
+        <!-- <div class="detenido" id="detenido">
+
+        </div> -->
         <div class="pelea" id="pelea">
             
         </div>
@@ -43,9 +54,9 @@
         </div>        
     </div>
     <div>
-        <div class="detenidov" id="detenidov">
+        <!-- <div class="detenidov" id="detenidov">
 
-        </div>
+        </div> -->
         <div class="victima" id="victimagol">
 
         </div>
