Add name in bar

--- a/juego.html
+++ b/juego.html
@@ -49,9 +49,12 @@
         <div class="victima" id="victimagol">
 
         </div>
-        <div class="victima3">
 
+        <div class="containerVictima3">
+        <div class="victima3">
         </div>
+        </div>
+
         <div class="victima2">
 
         </div>        
@@ -62,6 +65,7 @@
 
     <script src="animacion.js"></script>
     <script src="./js/juego.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
