--- a/juego.html
+++ b/juego.html
@@ -15,7 +15,7 @@
     
     <div class="player-names">
         <h2>YOU</h2>
-        <h2>List Name</h2>
+        <h2 class="namePlayers">List Name</h2>
     </div>
     <div class="live-bars-container">
         <div class="life-bar">
@@ -26,15 +26,12 @@
             <div class="life-bar-filling"></div>
         </div>
     </div>
-<<<<<<< HEAD
     
     <div>
         <div class="detenido" id="detenido">
-=======
     <section class="fight-zone">
         <div class="fight-left-zone">
             <div class="detenido" id="detenido">
->>>>>>> bf0ae9b9d0d3adc012c8e373ec90b139c883d330
 
             </div>
         </div>
@@ -82,10 +79,8 @@
 
     <script src="animacion.js"></script>
     <script src="./js/juego.js"></script>
-<<<<<<< HEAD
     <script src="./js/script.js"></script>
-=======
->>>>>>> bf0ae9b9d0d3adc012c8e373ec90b139c883d330
+
 
 </body>
 </html>
