--- a/juego.html
+++ b/juego.html
@@ -38,6 +38,10 @@
             </div>
         </div>
     </section>
+    <div class="game-buttons">
+        <button id="next-button"">NEXT</button>
+        <button id="kill-button">KILL</button>
+    </div>
     <div>
         <!-- <div class="detenido" id="detenido">
 
@@ -70,9 +74,7 @@
 
         </div>        
     </div>
-
     <script src="animacion.js"></script>
     <script src="./js/juego.js"></script>
-
 </body>
 </html>
