--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </section>
         </section>
         <section id="play">
-            <a id="playButton" onclick="goToJuegoHtml();">
+            <a id="playButton" onclick="goToJuegoHtml()">
                 <button>PLAY</button>
             </a>
         </section>
