--- a/juego.html
+++ b/juego.html
@@ -38,6 +38,9 @@
         </div>        
         <div class="victima4">
 
+        </div>
+        <div class="victima5">
+
         </div>        
     </div>
     <script src="animacion.js"></script>
