--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             </section>
         </section>
         <section id="play">
-            <a id="playButton" onclick="goToJuegoHtml();">
+            <a id="playButton" onclick="goToJuegoHtml()" href="./juego.html">
                 <button>PLAY</button>
-            </a>
-            <button><a id="button" href="./juego.html">PLAY</a></button>
         </section>
     </section>
 </body>
