array in local storage

--- a/juego.html
+++ b/juego.html
@@ -39,7 +39,7 @@
         </div>
     </section>
     <div class="game-buttons">
-        <button id="next-button"">NEXT</button>
+        <button id="next-button">NEXT</button>
         <button id="kill-button">KILL</button>
     </div>
     <div>
@@ -76,5 +76,7 @@
     </div>
     <script src="animacion.js"></script>
     <script src="./js/juego.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/scriptjuego.js"></script>
 </body>
 </html>
