--- a/juego.html
+++ b/juego.html
@@ -8,7 +8,7 @@
     <link href="estilos.css" type="text/css" rel="stylesheet">
     <title>MortalDev</title>
 </head>
-<body onload="addName()">
+<body>
 
     <section class="containerCounter">
         <span class="counter"></span>
