css y funcionalidad de boton enter en index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Add name</h3>
         <section id="field">
             <section id="add">
-                <input type="text" name="nombre" id="nombre" placeholder="| names">
+                <input type="text" name="nombre" id="nombre" placeholder=" Nombres de las victimas">
                 <button id="addBoton">+</button>
             </section>
             <section id="list">
