button error solved

--- a/juego.html
+++ b/juego.html
@@ -55,7 +55,7 @@
         <div class="rayos" id="rayos">
             
         </div>
-        <div><input type="button" id="pausa" value="Kill"></div>                
+        <div><input type="button" id="pausa" value="Kill" onclick="lanzar()"></div>                
     </div>
     <div>
         <!-- <div class="detenidov" id="detenidov">
