player characters in fight zone

--- a/juego.html
+++ b/juego.html
@@ -39,8 +39,8 @@
         </div>
     </section>
     <div class="game-buttons">
-        <button id="next-button"">NEXT</button>
-        <button id="kill-button">KILL</button>
+        <button id="next-button">NEXT</button>
+        <button id="pausa" class="kill-button" value="Kill"></button>
     </div>
     <div>
         <!-- <div class="detenido" id="detenido">
@@ -55,7 +55,7 @@
         <div class="rayos" id="rayos">
             
         </div>
-        <div><input type="button" id="pausa" value="Kill" onclick="lanzar()"></div>                
+        <!-- <div><input type="button" id="pausa" value="Kill"></div>                 -->
     </div>
     <div>
         <!-- <div class="detenidov" id="detenidov">
