--- a/juego.html
+++ b/juego.html
@@ -40,7 +40,8 @@
     </section>
     <div class="game-buttons">
         <button id="next-button">NEXT</button>
-        <button id="pausa" class="kill-button" value="Kill"></button>
+        <!--<button id="pausa" class="kill-button" value="Kill"></button>-->
+        <input type="button" id="pausa" class="kill-button" value="KILL">
     </div>
     <div>
         <!-- <div class="detenido" id="detenido">
@@ -55,7 +56,7 @@
         <div class="rayos" id="rayos">
             
         </div>
-        <!-- <div><input type="button" id="pausa" value="Kill"></div>                 -->
+        
     </div>
     <div>
         <!-- <div class="detenidov" id="detenidov">
@@ -78,6 +79,7 @@
         </div>        
     </div>
     <script src="animacion.js"></script>
-    <script src="./js/juego.js"></script>
+    <script src="./js/juego.js"></script>\
+    <script src="./js/scriptjuego.js"></script>
 </body>
 </html>
