player animation finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Add name</h3>
         <section id="field">
             <section id="add">
-                <input type="text" name="nombre" id="nombre" placeholder=" Nombres de las victimas">
+                <input type="text" name="nombre" id="nombre" placeholder="| names">
                 <button id="addBoton">+</button>
             </section>
             <section id="list">
@@ -21,7 +21,7 @@
             </section>
         </section>
         <section id="play">
-            <a id="playButton" onclick="goToJuegoHtml()">
+            <a id="playButton" onclick="goToJuegoHtml();">
                 <button>PLAY</button>
             </a>
         </section>
