array local storage finished

--- a/final.html
+++ b/final.html
@@ -10,9 +10,16 @@
 <body class="body-final">
     <div class="final-div">
         <h2 class="title-final">MORTAL DEV</h2>
-        <div class="text-eliminados">ELIMINADOS</div>
-        <button class="button-playagain">JUGAR DE NUEVO</button>
+        <div class="text-eliminados">
+            <h2>Eliminados</h2>
+            <ul class="eliminados-list">
+
+            </ul>
+        </div>
+        <a href="./index.html">
+            <button class="button-playagain">JUGAR DE NUEVO</button>
+        </a>
     </div>
-    
+    <script src="./animacion.js"></script>
 </body>
 </html>
