--- a/popUp.html
+++ b/popUp.html
@@ -8,12 +8,10 @@
     <title>Mortal Dev</title>
 </head>
 <body>
-    <div class="popUp">
+    <div class="popUp showPopUp">
         <img class="img-calavera" src="./src/images/calavera.png" alt="Calavera- Jugador eliminado">
         <p class="popUp-text">Has eliminado a un developer</p>
         <button class="button-popUp">Next</button>
-
-
     </div>
 </body>
 </html>
