adding kill popup

--- a/juego.html
+++ b/juego.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/juego.css">
     <link href="estilos.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/popup.css">
     <title>MortalDev</title>
 </head>
 <body onload="playGameSong()">
@@ -46,9 +47,12 @@
 
     </section>
 
- 
 
-
+    <div class="popUp">
+        <img class="img-calavera" src="./src/images/calavera.png" alt="Calavera- Jugador eliminado">
+        <p class="popUp-text">Has eliminado a un developer</p>
+        <button class="button-popUp">Next</button>
+    </div>
 
 
     <div class="game-buttons">
