--- a/popUp.html
+++ b/popUp.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="./css/popup.css">
     <title>Mortal Dev</title>
 </head>
 <body>
-    <div class="popUp showPopUp">
+    <div class="popUp">
         <img class="img-calavera" src="./src/images/calavera.png" alt="Calavera- Jugador eliminado">
         <p class="popUp-text">Has eliminado a un developer</p>
         <button class="button-popUp">Next</button>
     </div>
+    <script src="./animacion.js"></script>
 </body>
 </html>
