mortal dev finished

--- a/final.html
+++ b/final.html
@@ -11,7 +11,7 @@
     <div class="final-div">
         <h2 class="title-final">MORTAL DEV</h2>
         <div class="text-eliminados">
-            <h2>Eliminados</h2>
+            <h2>Todos fueron <br />Eliminados</h2>
             <ul class="eliminados-list">
 
             </ul>
