--- a/popUp.html
+++ b/popUp.html
@@ -11,8 +11,7 @@
     <div class="popUp">
         <img class="img-calavera" src="./src/images/calavera.png" alt="Calavera- Jugador eliminado">
         <p class="popUp-text">Has eliminado a un developer</p>
-        <button class="button-popUp">Next</button>
+     <button class="button-popUp" href="index.html">Next</button>
     </div>
-    <script src="./animacion.js"></script>
 </body>
 </html>
